# vibes

./: .gitignore  CLAUDE.md  baukje.sh  builder-ssh-config  claude.sh  default.nix  entrypoint.sh  kyle.sh  learnings.md  morag.sh  nix.conf  readme.md  settings.json  stan.sh  test-plan-lix-and-etc-fix.sh
character/: cabal.md  morag.md
face-speak/: face-speak.cabal  shell.nix
face-speak/app/: Main.hs
face-speak/src/: Face.hs  Viseme.hs
face-speak/test/: Main.hs
hooks/: kill-tts.sh  piper-align.py  piper-speak.py  speak.sh  test_piper_align.py
instances/kyle/: CLAUDE.md
root/: CLAUDE.md
skills/ci-nix/: SKILL.md
skills/ci-watch/: SKILL.md
skills/dutch-energy-comparison/: SKILL.md
skills/error-messages/: SKILL.md
skills/haskell-project/: SKILL.md
skills/investment-review/: SKILL.md
skills/mentor-roleplay/: SKILL.md
skills/nix/: SKILL.md
skills/train-speech-model/: SKILL.md  onstart-template.md  openslr-datasets.md
skills/unwitch-conversions/: SKILL.md
skills/vastai-gpu/: SKILL.md
skills/verify-test-fails/: SKILL.md
