cabal-version:   3.0
name:            face-speak
version:         0.1.0.0
synopsis:        Viseme-based talking face for haskell-vibes TTS
license:         MIT
build-type:      Simple

library
  exposed-modules:  Viseme
                  , Face
  build-depends:    base >= 4.14 && < 5
                  , gi-gtk >= 4.0
                  , gi-gdk >= 4.0
                  , gi-glib >= 2.0
                  , gi-gio >= 2.0
                  , gi-cairo-render >= 0.1
                  , gi-cairo-connector >= 0.1
                  , aeson >= 2.0
                  , vector
                  , text
                  , bytestring
                  , containers
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat

executable face-speak
  main-is:          Main.hs
  build-depends:    base >= 4.14 && < 5
                  , face-speak
                  , gi-gtk >= 4.0
                  , gi-glib >= 2.0
                  , gi-gio >= 2.0
                  , gi-cairo-connector >= 0.1
                  , text
                  , vector
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -threaded

test-suite face-speak-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:    base >= 4.14 && < 5
                  , face-speak
                  , tasty
                  , tasty-hunit
                  , text
                  , vector
                  , aeson
                  , bytestring
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat
